@@ -10,7 +10,7 @@ SRC_URI="https://github.com/voidlinux/xbps/archive/${PV}.tar.gz -> ${P}.tar.gz"
 LICENSE="BSD-2"
 SLOT="0"
 KEYWORDS="~amd64 ~x86"
-IUSE="debug doc libressl test"
+IUSE="debug doc libressl static-libs test"
 
 RDEPEND=">=app-arch/libarchive-2.8.0
 	sys-libs/zlib
@@ -39,4 +39,10 @@ src_configure() {
 		$(use_enable doc api-docs) \
 		$(use_enable test tests) \
 		--verbose
+}
+
+src_install() {
+	default
+
+	use static-libs || rm "${D}/usr/$(get_libdir)/libxbps.a" || die
 }
