@@ -1,3 +1,7 @@
+  01 Jun 2017; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
+  xbps-0.51.ebuild, xbps-9999.ebuild:
+  app-arch/xbps: remove static-libs
+
 *xbps-0.51 (01 Jun 2017)
 *xbps-9999 (01 Jun 2017)
 
